<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeActivity">

    <TextView
        android:id="@+id/txtTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/txt_title"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/txtingredients"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginBottom="7dp"
        android:text="@string/txt_Ingredients"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/txtItem1"
        app:layout_constraintStart_toStartOf="@+id/txtTitle2"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle2" />

    <TextView
        android:id="@+id/txtItem1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginBottom="7dp"
        android:text="@string/txt_item1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txtItem2"
        app:layout_constraintStart_toStartOf="@+id/txtingredients"
        app:layout_constraintTop_toBottomOf="@+id/txtingredients" />

    <TextView
        android:id="@+id/txtItem2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:text="@string/txt_item2"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txtItem3"
        app:layout_constraintStart_toStartOf="@+id/txtItem1"
        app:layout_constraintTop_toBottomOf="@+id/txtItem1" />

    <TextView
        android:id="@+id/txtItem3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:text="@string/txt_item3"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txtItem4"
        app:layout_constraintStart_toStartOf="@+id/txtItem2"
        app:layout_constraintTop_toBottomOf="@+id/txtItem2" />

    <TextView
        android:id="@+id/txtItem4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="57dp"
        android:text="@string/txt_item4"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txtDirections"
        app:layout_constraintStart_toStartOf="@+id/txtItem3"
        app:layout_constraintTop_toBottomOf="@+id/txtItem3" />

    <TextView
        android:id="@+id/txtDirections"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginBottom="8dp"
        android:text="@string/txt_directions"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/txtMix"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtItem4" />

    <TextView
        android:id="@+id/txtMix"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="195dp"
        android:text="@string/txt_mix"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtDirections"
        app:layout_constraintTop_toBottomOf="@+id/txtDirections" />
</androidx.constraintlayout.widget.ConstraintLayout>